# sipm-bias-control

./: .gitignore
bias-control-lt8362/: bias_generator_LT8362.kicad_pcb  bias_generator_LT8362.kicad_pro  bias_generator_LT8362.kicad_sch
firmware/zephyr/: CMakeLists.txt  Kconfig  README.md  prj.conf
firmware/zephyr/boards/arm/sipm_bias_controller/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  Kconfig.sipm_bias_controller  board.c  board.cmake  board.yml  sipm_bias_controller-pinctrl.dtsi  sipm_bias_controller.dts  sipm_bias_controller.yaml  sipm_bias_controller_defconfig
firmware/zephyr/include/: bias.h  mcp47feb22.h
firmware/zephyr/src/: bias.c  main.c  mcp47feb22.c
firmware/zephyr/sysbuild/mcuboot/: prj.conf
firmware/zephyr/sysbuild/mcuboot/boards/: sipm_bias_controller.conf
sourcing-work/: AUDIT.md  DESIGN_NOTES.md  FOOTPRINT_AUDIT.md  HOWTO.html  HV_AUDIT.md  VERIFICATION.md  audit.js  bom_bias-control-lt8362.csv  bom_combined.csv  bom_power-supply.csv  bom_tiav3_s14160.csv  build_bom_csv.js  build_bom_manager_csv.js  build_lcsc_csv.js  build_sourcing_outputs.js  build_url_list.js  build_xlsx.js  digikey_bom_manager.csv  digikey_fastadd_form.html  digikey_fastadd_url.txt  digikey_links.html  extract_boms.js  lcsc_bom.csv  package-lock.json  package.json  pcbdata_bias-control-lt8362.json  pcbdata_power-supply.json  pcbdata_tiav3_s14160.json  review_queue.csv  sourcing.json  sourcing.xlsx  sourcing_bias-control-lt8362.csv  sourcing_master.csv  sourcing_power-supply.csv  sourcing_tiav3_s14160.csv  unique_parts.csv  unique_parts.js  verify.js
(+65 files in other folders)
